--- a/views/portfolios.ejs
+++ b/views/portfolios.ejs
@@ -90,6 +90,7 @@
                                 <th>Samlet erhvervelsespris</th>
                                 <th>GAK</th>
                                 <th>Forventet værdi</th>
+                                <th>Urealiseret gevinst/tab</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -100,6 +101,7 @@
                                     <td><%= typeof stock.samletKøbspris === "number" ? stock.samletKøbspris.toFixed(2) : "0.00" %> DKK</td>
                                     <td><%= typeof stock.gak === "number" ? stock.gak.toFixed(2) : "0.00" %> DKK</td>
                                     <td><%= typeof stock.forventetVærdi === "number" ? stock.forventetVærdi.toFixed(2) : "0.00" %> DKK</td>
+                                    <td><%= typeof stock.urealiseretGevinst === "number" ? stock.urealiseretGevinst.toFixed(2) : "0.00" %> DKK</td>
                                 </tr>
                             <% }) %>
                         </tbody>
