--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -83,7 +83,7 @@
   <!-- Top 5 værdipapirer -->
   <div id="top5_boks_id">
     <div id="top5Værdipapirer_tværsAfPorteføljer_id">
-      <span>Top 5 værdipapirer på tværs af porteføljer</span>
+      <span>Top 5 værdipapirer baseret på værdi</span>
       <table>
         <tr>
           <th>Name</th>
@@ -125,7 +125,7 @@
       </table>
     </div>
     <div id="top5Værdipapirer_urealiseret_id">
-      <span>Top 5 værdipapirer på tværs af porteføljer</span>
+      <span>Top 5 værdipapirer baseret på profit</span>
       <table>
         <tr>
           <th>Name</th>
