--- a/public/trade_style.css
+++ b/public/trade_style.css
@@ -93,7 +93,7 @@ li a:hover span {
         width: 37%;
         border: 2px solid lightgray;
         display: inline-block;
-        margin-top: -100px;
+        margin-top: 15px !important;
         
     }
     #searchStocks_input_id{
@@ -117,7 +117,7 @@ li a:hover span {
       font-size: 14px;
     }
     #stockListBox_id button:hover{
-      color: dodgerblue;
+      color: dodgerblue !important;
       cursor: pointer;
     }
     
@@ -182,7 +182,7 @@ li a:hover span {
     width: 97%;
     height: 395px;
     border-radius: 13px;
-    margin-top: -40px;
+    margin-top: -24px;
     margin-right: 3%;
 }
 #viewStock_id p{
@@ -200,7 +200,7 @@ li a:hover span {
   font-family: normalskrift;
   outline: none;
   border: none;
-  padding: 7px 20px 7px 20px;
+  padding: 7.7px 20px 7px 20px;
   margin-top: 1%;
   font-size: 15px;
   border-bottom-right-radius: 7px;
@@ -211,7 +211,7 @@ li a:hover span {
   background-color: darkgreen;
 }
 #NumberOfStocks_id{
-  width: 20%;
+  width: 15%;
   font-family: normalskrift;
   border-bottom-left-radius: 7px;
   border-top-left-radius: 7px;
